started recipe-details-component

--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -1,1 +1,28 @@
-<p>recipes-detail works!</p>
+<div class="row">
+  <div class="col">
+    <img alt="" class="img-fluid" src="">
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <h1>Recipe Name</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <div class="dropdown">
+      <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Manage Recipe</button>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Add Ingredient to Shopping List</a>
+        <a class="dropdown-item" href="#">Edit Recipe</a>
+        <a class="dropdown-item" href="#">Remove Recipe</a>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col">Description</div>
+</div>
+<div class="row">
+  <div class="col">Ingredients</div>
+</div>
