--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -1,1 +1,19 @@
-<p>shopping-list-edit works!</p>
+<div class="row">
+  <div class="col">
+    <form>
+      <div class="form-row">
+        <div class="col-9">
+          <label for="name">Name</label>
+          <input type="text" class="form-control" placeholder="name" id="name">
+        </div>
+        <div class="col-3">
+          <label for="amount">Amount</label>
+          <input type="number" class="form-control" placeholder="amount" id="amount">
+        </div>
+      </div>
+      <button class="btn btn-success" type="submit">Submit</button>
+      <button class="btn btn-danger" type="button">Remove</button>
+      <button class="btn btn-primary" type="button">Clear</button>
+    </form>
+  </div>
+</div>
