--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
-<app-header></app-header>
+<app-header (currentFeature)="onNavigate($event)"></app-header>
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
-    </div>
-  </div>
+  <div *ngIf="loadedFeature === 'recipe'; then thenBlock else elseBlock"></div>
+  <ng-template #thenBlock><app-recipes class="row"></app-recipes></ng-template>
+  <ng-template #elseBlock><app-shopping-list class="row"></app-shopping-list></ng-template>
 </div>
