--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,22 +1,7 @@
-<div class="row">
-  <div class="col-xs-12">
-    <button class="btn btn-success">New Recipe</button>
-  </div>
-</div>
+<button class="btn btn-success mb-3">New Recipe</button>
 
 <div class="list-group">
   <a *ngFor="let recipe of recipes" class="list-group-item" href="#">
-    <div class="d-flex justify-content-between">
-      <div>
-        <h5>{{ recipe.name }}</h5>
-        <p class="mb-0">{{ recipe.description }}</p>
-      </div>
-      <img
-        alt="{{ recipe.description }}"
-        src="{{ recipe.imagePath}}"
-        style="max-height: 50px;"
-      >
-    </div>
+    <app-recipe-item [recipeElement]="recipe"></app-recipe-item>
   </a>
-  <app-recipe-item></app-recipe-item>
 </div>
