--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -1,19 +1,22 @@
-<div class="row">
-  <div class="col">
-    <form>
-      <div class="form-row">
-        <div class="col-9">
-          <label for="name">Name</label>
-          <input type="text" class="form-control" placeholder="name" id="name">
-        </div>
-        <div class="col-3">
-          <label for="amount">Amount</label>
-          <input type="number" class="form-control" placeholder="amount" id="amount">
-        </div>
-      </div>
-      <button class="btn btn-success" type="submit">Submit</button>
-      <button class="btn btn-danger" type="button">Remove</button>
-      <button class="btn btn-primary" type="button">Clear</button>
-    </form>
+<form>
+  <div class="form-row mb-3">
+    <div class="col-9">
+      <label for="name">Name</label>
+      <input class="form-control" id="name" placeholder="name" type="text">
+    </div>
+    <div class="col-3">
+      <label for="amount">Amount</label>
+      <input
+        class="form-control"
+        id="amount"
+        placeholder="amount"
+        type="number"
+      >
+    </div>
   </div>
-</div>
+  <div class="btn-group">
+    <button class="btn btn-success" type="submit">Submit</button>
+    <button class="btn btn-danger" type="button">Remove</button>
+    <button class="btn btn-primary" type="button">Clear</button>
+  </div>
+</form>
