--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,14 +1,12 @@
-<div class="row">
-  <div class="col-xs-10">
-    <app-shopping-list-edit></app-shopping-list-edit>
-    <hr>
-    <div class="list-group">
-      <button
-        *ngFor="let ingredient of ingredients"
-        class="list-group-item list-group-item-action"
-        type="button"
-      >{{ ingredient.name }} ({{ ingredient.amount }})
-      </button>
-    </div>
+<div class="col">
+  <app-shopping-list-edit></app-shopping-list-edit>
+  <hr>
+  <div class="list-group">
+    <button
+      *ngFor="let ingredient of ingredients"
+      class="list-group-item list-group-item-action"
+      type="button"
+    >{{ ingredient.name }} ({{ ingredient.amount }})
+    </button>
   </div>
 </div>
