--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,6 +1,9 @@
 <div class="col-md-5">
-  <app-recipes-list></app-recipes-list>
+  <app-recipes-list (currentRecipe)="selectedRecipe = $event"></app-recipes-list>
 </div>
 <div class="col-md-7">
-  <app-recipes-detail></app-recipes-detail>
+  <app-recipes-detail *ngIf="selectedRecipe; else elseBlock" [currentRecipe]="selectedRecipe"></app-recipes-detail>
+  <ng-template #elseBlock>
+    <p>Please select a recipe!</p>
+  </ng-template>
 </div>
