--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,11 +1,11 @@
-<div class="d-flex justify-content-between">
+<div (click)="onSelectRecipe()" class="d-flex justify-content-between">
   <div>
-    <h5>{{ recipeElement.name }}</h5>
-    <p class="mb-0">{{ recipeElement.description }}</p>
+    <h5>{{ recipe.name }}</h5>
+    <p class="mb-0">{{ recipe.description }}</p>
   </div>
   <img
-    alt="{{ recipeElement.description }}"
-    src="{{ recipeElement.imageUrl }}"
+    alt="{{ recipe.name }}"
+    [src]="recipe.imageUrl"
     style="max-height: 50px;"
   >
 </div>
