--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
   <div class="col">
-    <h1>Recipe Name</h1>
+    <img [src]="currentRecipe.imageUrl" alt="{{currentRecipe.name}}" class="img-fluid" style="max-height: 300px">
   </div>
 </div>
 <div class="row">
@@ -21,7 +21,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col">Description</div>
+  <div class="col">{{currentRecipe.description}}</div>
 </div>
 <div class="row">
   <div class="col">Ingredients</div>
