--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -2,7 +2,12 @@
   <div class="form-row mb-3">
     <div class="col-9">
       <label for="name">Name</label>
-      <input class="form-control" id="name" placeholder="name" type="text">
+      <input
+        class="form-control"
+        id="name"
+        placeholder="name"
+        type="text"
+        #nameInput>
     </div>
     <div class="col-3">
       <label for="amount">Amount</label>
@@ -11,11 +16,16 @@
         id="amount"
         placeholder="amount"
         type="number"
+        #amountInput
       >
     </div>
   </div>
   <div class="btn-group">
-    <button class="btn btn-success" type="submit">Submit</button>
+    <button
+      class="btn btn-success"
+      type="submit"
+      (click)="onAddIngredient()">Submit
+    </button>
     <button class="btn btn-danger" type="button">Remove</button>
     <button class="btn btn-primary" type="button">Clear</button>
   </div>
