--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,5 +1,5 @@
 <div class="col">
-  <app-shopping-list-edit></app-shopping-list-edit>
+  <app-shopping-list-edit (ingredient)="onIngredientAdded($event)"></app-shopping-list-edit>
   <hr>
   <div class="list-group">
     <button
