--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,13 +6,13 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#" (click)="onSelectFeature('recipe')">Recipes</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="recipes">Recipes</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" (click)="onSelectFeature('shopping-list')">Shopping List</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="shopping-list">Shopping List</a>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown" appDropdown>
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
         </a>
