--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -5,15 +5,21 @@
 </div>
 <div class="row">
   <div class="col">
-    <img [src]="currentRecipe.imageUrl" alt="{{currentRecipe.name}}" class="img-fluid" style="max-height: 300px">
+    <img
+      [src]="currentRecipe.imageUrl"
+      alt="{{currentRecipe.name}}"
+      class="img-fluid"
+      style="max-height: 300px">
   </div>
 </div>
 <div class="row">
   <div class="col">
-    <div class="dropdown">
-      <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Manage Recipe</button>
+    <div class="dropdown" appDropdown>
+      <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+        Manage Recipe
+      </button>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Add Ingredient to Shopping List</a>
+        <a class="dropdown-item" (click)="onAddIngredientToShoppingList()" style="cursor: pointer">Add Ingredient to Shopping List</a>
         <a class="dropdown-item" href="#">Edit Recipe</a>
         <a class="dropdown-item" href="#">Remove Recipe</a>
       </div>
@@ -24,5 +30,9 @@
   <div class="col">{{currentRecipe.description}}</div>
 </div>
 <div class="row">
-  <div class="col">Ingredients</div>
+  <div class="col">
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of currentRecipe.ingredients">{{ ingredient.name }} = {{ ingredient.amount }}</li>
+    </ul>
+  </div>
 </div>
