--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,13 +12,13 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="shopping-list">Shopping List</a>
       </li>
-      <li class="nav-item dropdown" appDropdown>
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <li class="nav-item dropdown" appDropdown style="cursor: pointer;">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Save Data</a>
-          <a class="dropdown-item" href="#">Fetch Data</a>
+          <a class="dropdown-item">Save Data</a>
+          <a class="dropdown-item">Fetch Data</a>
         </div>
       </li>
     </ul>
