--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -18,10 +18,10 @@
       <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
         Manage Recipe
       </button>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" (click)="onAddIngredientToShoppingList()" style="cursor: pointer">Add Ingredient to Shopping List</a>
-        <a class="dropdown-item" href="#">Edit Recipe</a>
-        <a class="dropdown-item" href="#">Remove Recipe</a>
+      <div class="dropdown-menu" style="cursor: pointer;">
+        <a class="dropdown-item" (click)="onAddIngredientToShoppingList()">Add Ingredient to Shopping List</a>
+        <a class="dropdown-item">Edit Recipe</a>
+        <a class="dropdown-item">Remove Recipe</a>
       </div>
     </div>
   </div>
