--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -2,8 +2,5 @@
   <app-recipes-list></app-recipes-list>
 </div>
 <div class="col-md-7">
-  <app-recipes-detail *ngIf="selectedRecipe; else elseBlock" [currentRecipe]="selectedRecipe"></app-recipes-detail>
-  <ng-template #elseBlock>
-    <p>Please select a recipe!</p>
-  </ng-template>
+  <router-outlet></router-outlet>
 </div>
