--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -6,8 +6,8 @@
 <div class="row">
   <div class="col">
     <img
-      [src]="currentRecipe.imageUrl"
-      alt="{{currentRecipe.name}}"
+      [src]="recipe.imageUrl"
+      alt="{{recipe.name}}"
       class="img-fluid"
       style="max-height: 300px">
   </div>
@@ -27,12 +27,12 @@
   </div>
 </div>
 <div class="row">
-  <div class="col">{{currentRecipe.description}}</div>
+  <div class="col">{{recipe.description}}</div>
 </div>
 <div class="row">
   <div class="col">
     <ul class="list-group">
-      <li class="list-group-item" *ngFor="let ingredient of currentRecipe.ingredients">{{ ingredient.name }} = {{ ingredient.amount }}</li>
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">{{ ingredient.name }} = {{ ingredient.amount }}</li>
     </ul>
   </div>
 </div>
