--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="recipe" class="d-flex justify-content-between">
+<div class="d-flex justify-content-between" [routerLink]="[recipe.id]">
   <div>
     <h5>{{ recipe.name }}</h5>
     <p class="mb-0">{{ recipe.description }}</p>
