--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -20,7 +20,7 @@
       </button>
       <div class="dropdown-menu" style="cursor: pointer;">
         <a class="dropdown-item" (click)="onAddIngredientToShoppingList()">Add Ingredient to Shopping List</a>
-        <a class="dropdown-item">Edit Recipe</a>
+        <a class="dropdown-item" (click)="onEditRecipe()">Edit Recipe</a>
         <a class="dropdown-item">Remove Recipe</a>
       </div>
     </div>
