--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header (currentFeature)="onNavigate($event)"></app-header>
+<app-header></app-header>
 <div class="container mt-3 mb-3">
   <router-outlet></router-outlet>
 </div>
